k8/k8-deploy-web-api.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-api
  labels:
    app: web-api 
spec:
  selector:
    app: web-api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

  
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api
spec:
  selector:
      matchLabels:
        app: web-api
  replicas: 1
  template:
    metadata:
      labels:
        app: web-api
    spec:
      imagePullSecrets:
        - name: regcred      
      containers:
        - name: web-api
          image: techedgeopensource.azurecr.io/academy/webapi:latest
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
